doxygen (1.8.16-1~exp4) UNRELEASED; urgency=medium

  * Build-depend on texlive-plain-generic instead of obsolete texlive-
    generic-recommended.
  * Make the output of $year reproducible. Closes: #942671.
  * Fix a regression whereby if the Doxyfile has a blank FILE_PATTERNS then
    no files are processed.
  * Build using LLVM 9.0

 -- Paolo Greppi <paolo.greppi@libpf.com>  Thu, 31 Oct 2019 13:16:23 +0100

doxygen (1.8.16-1~exp3) experimental; urgency=medium

  [ Joenio Costa ]
  * new package (doxygen-doxyparse)

  [ Paolo Greppi ]
  * Inject atomic lib through cmake to fix armel build
  * Make latex's \year macro and doxygen_manual.pdf reproducible
  * SHOW_NAMESPACES = NO breaks latex PDF fixed in 1.8.16. Closes: #929143

 -- Paolo Greppi <paolo.greppi@libpf.com>  Sun, 15 Sep 2019 07:32:11 +0200

doxygen (1.8.16-1~exp2) experimental; urgency=medium

  * Set DEB_LDFLAGS_MAINT_APPEND early to fix armel build

 -- Paolo Greppi <paolo.greppi@libpf.com>  Tue, 13 Aug 2019 23:02:08 +0200

doxygen (1.8.16-1~exp1) experimental; urgency=medium

  [ Gianfranco Costamagna ]
  * Move VCS fields to salsa.d.o/debian namespace
  * Switch build to llvm-8. Closes: #923047
  * Strip archs where llvm-8 is not available from build
  * Bump compat level to 12

  [ Paolo Greppi ]
  * Remove longtabu patch; thanks to tabu patch in texlive-latex-extra closes:
    #920982, #921273, #921293 and #921297
  * doxygen 1.8.16 release.
  * License is now plain GPL-2

 -- Paolo Greppi <paolo.greppi@libpf.com>  Tue, 13 Aug 2019 19:17:43 +0200

doxygen (1.8.15-1~exp1) experimental; urgency=medium

  [ Paolo Greppi ]
  * doxygen 1.8.15 release. Closes: #920447.
  * Do not produce "Directory Reference" man pages. Closes: #742871.
  * Bump debhelper compat.
  * New maintainer. Closes: #888580.
  * Update homepage.
  * Fix lintian W binary-without-manpagefix.
  * Fix lintian P file-contains-trailing-whitespace.
  * Move repo to salsa.
  * Bump standard version