@@ -6,8 +6,9 @@ doxygen (1.8.16-1~exp4) UNRELEASED; urgency=medium
   * Fix a regression whereby if the Doxyfile has a blank FILE_PATTERNS then
     no files are processed.
   * Build using LLVM 9.0
+  * Fix patch to conditionally skip copying jquery. Closes: #943890.
 
- -- Paolo Greppi <paolo.greppi@libpf.com>  Thu, 31 Oct 2019 13:16:23 +0100
+ -- Paolo Greppi <paolo.greppi@libpf.com>  Thu, 31 Oct 2019 16:23:16 +0100
 
 doxygen (1.8.16-1~exp3) experimental; urgency=medium
 
